# notebooklm-cdp-cli

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: linux-server-runbook.md
scripts/: harden-ssh-linux.sh  install-base-linux.sh  start-chrome-cdp-linux.sh  start-novnc-linux.sh  verify-linux-host.sh
src/notebooklm_cdp_cli/: auth.py  browser.py  cli.py  config.py  doctor.py  notebooklm_ops.py  state.py
src/notebooklm_cdp_cli/core/: __init__.py  cdp.py  output.py  product.py  targets.py  targets_cli.py
src/notebooklm_cdp_cli/products/: __init__.py
src/notebooklm_cdp_cli/products/colab/: __init__.py  cli.py  legacy_cli.py  ops.py
src/notebooklm_cdp_cli/products/flow/: __init__.py  cli.py  ops.py
src/notebooklm_cdp_cli/products/gemini/: __init__.py  cli.py  contract.py  legacy_cli.py  ops.py  state.py
tests/: test_artifact_commands.py  test_attach.py  test_auth.py  test_auth_session_compat.py  test_browser.py  test_chat_generate_ux.py  test_cli.py  test_colab_target_state.py  test_config.py  test_gemini_product_contract.py  test_generation_submission_recovery.py  test_language_commands.py  test_note_commands.py  test_notebook_commands.py  test_research_chat_commands.py  test_share_commands.py  test_source_commands.py
tests/core/: test_target_resolution.py  test_targets.py  test_targets_cli_contract.py
tests/products/: __init__.py
tests/products/colab/: test_cli_contract.py  test_file_artifact_ops.py  test_legacy_cli_contract.py  test_ops_contract.py
tests/products/flow/: __init__.py  test_cli_contract.py  test_ops_contract.py
tests/products/gemini/: __init__.py  test_chat_state.py  test_cli_contract.py  test_experimental_cli_contract.py  test_legacy_cli_contract.py
